syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "barbershop/src/pb/barber";

message BarberRoles {
    string id = 1;
    string barber_id = 2;
    string barber_shop_id = 3;
    int32 role_id = 4;
}