syntax = "proto3";

package pb;

import "barber/barber.proto";


option go_package = "barbershop/src/pb/barber";


message GetBarberEmployeeRequest{
    string barber_shop_id = 1;
    int32 limit = 2;
    int32 page = 3;
}

message GetBarberEmployeeResponse {
    repeated BarberDetail barber_details = 1;
    int32 total_employees = 2;
}
